@@ -1,0 +1,5 @@
+package org.apache.cassandra.db.filter;
+
+public class TombstoneOverwhelmingException extends RuntimeException
+{
+}
