@@ -22,6 +22,13 @@ New features
     - Speculative retry defaults to 99th percentile
       (See blog post at TODO)
 
+Upgrading
+---------
+    - tombstone_debug_threshold from 1.2.11 has been changed to 
+      tombstone_failure_threshold.  Adjust this if your application
+      relies on scanning a large number of tombstones (which is dangerous
+      and can cause the server to exhaust its heap).
+
 
 2.0.1
 =====
